# PROJECT-school-profile

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build-container.yaml
docker/: .env.example  db.env  run.sh
docker/nginx/: nginx.conf
src/: .dockerignore
src/chatbot/: admin.py  chatbot.py  models.py  urls.py  views.py
src/chatbot/migrations/: 0001_initial.py
src/content/: blocks.py  models.py
src/content/migrations/: 0001_initial.py  0002_alter_articleindexpage_body_alter_standardpage_body.py  0002_homepage.py  0003_alter_homepage_body_alter_standardpage_body.py  0004_alter_homepage_body_alter_standardpage_body.py  0005_articleindexpage_body.py  0006_remove_articleindexpage_introduction.py  0007_articlepage_image_alter_articlepage_body.py  0008_remove_articlepage_image_articlepage_thumbnail.py
src/core/: urls.py
src/core/configs/: db.py  email.py  logs.py  paths.py  storages.py
src/core/settings/: base.py  dev.py  production.py
src/core/templates/: 404.html  500.html  base.html
src/global/: models.py
src/global/migrations/: 0001_initial.py  0002_generalsettings.py  0002_navigationsettings_menuitem.py  0003_menuitem_show_children.py  0004_navigationsettings_site_alter_menuitem_show_children.py
src/home/: models.py  urls.py  views.py
src/navigation/: models.py
src/school/: admin.py  blocks.py  models.py  urls.py  views.py
src/streams/: blocks.py  vars.py
src/templates/: base.html
test/: locustfile.py
(+100 files in other folders)
