[project]
name = "project-school-profile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-cotton>=2.3.0",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.12",
    "python-decouple>=3.8",
    "rapidfuzz>=3.14.3",
    "sentry-sdk[django]>=2.48.0",
    "wagtail>=7.1.2",
]

[dependency-groups]
dev = [
    "locust>=2.43.0",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.locust]
locustfile = "test/locustfile.py"
